# qpdfview

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTORS  TODO  fitz-plugin.pro  qpdfview.pri
cmake/: djvu_plugin.cmake  fitz_plugin.cmake  image_plugin.cmake  pdf_plugin.cmake  ps_plugin.cmake  qpdfview_utils.cmake
miscellaneous/: qpdfview.desktop.in
sources/: annotationwidgets.cpp  annotationwidgets.h  application.cpp  application.h  bookmarkdialog.cpp  bookmarkdialog.h  bookmarkmenu.cpp  bookmarkmenu.h  bookmarkmodel.cpp  bookmarkmodel.h  colorwidget.cpp  colorwidget.h  database.cpp  database.h  djvumodel.cpp  djvumodel.h  documentlayout.cpp  documentlayout.h  documentview.cpp  documentview.h  fitzmodel.cpp  fitzmodel.h  fontsdialog.cpp  fontsdialog.h  formfieldwidgets.cpp  formfieldwidgets.h  global.h  helpdialog.cpp  helpdialog.h  imagemodel.cpp  imagemodel.h  macros.h  main.cpp  mainwindow.cpp  mainwindow.h  miscellaneous.cpp  miscellaneous.h  model.h  pageitem.cpp  pageitem.h  (+35 more)
translations/: qpdfview_ca.qm  qpdfview_cs.qm  qpdfview_en_GB.qm  qpdfview_fi.qm  qpdfview_fr.qm  qpdfview_it.qm  qpdfview_lt.qm  qpdfview_pl.qm  qpdfview_ru.qm  qpdfview_uk.qm  qpdfview_zh_CN.qm
